[gd_scene load_steps=16 format=3 uid="uid://8cc7vuex3aav"]

[ext_resource type="Texture2D" uid="uid://bd5oy5hy68q20" path="res://Assets/Image/PLayer/Player2.png" id="1"]
[ext_resource type="Script" uid="uid://c6gace5bi8b1w" path="res://Assets/Scenes/Object/Conveyors/ConveyorBoxes.gd" id="2"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("1")
region = Rect2(106, 593, 16, 16)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1")
region = Rect2(144, 593, 16, 16)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../..:BoxA_was_triggered")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="5"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-0.5, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5)]
}

[sub_resource type="Animation" id="6"]
resource_name = "trigger"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 0.5), Vector2(1, 1.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8), Vector2(0, -1.25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../..:BoxA_was_triggered")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uj7gh"]
_data = {
&"RESET": SubResource("4"),
&"idle": SubResource("5"),
&"trigger": SubResource("6")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../BoxB/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../BoxB/AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../BoxB/AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="9"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../BoxB/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../BoxB/AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-0.5, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5)]
}

[sub_resource type="Animation" id="12"]
resource_name = "trigger"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../BoxB/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../BoxB/AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 0.5), Vector2(1, 1.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../BoxB/AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8), Vector2(0, -2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nodfd"]
_data = {
&"RESET": SubResource("8"),
&"idle": SubResource("9"),
&"trigger": SubResource("12")
}

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(16, 16)

[node name="ConveyorBoxes" type="Node2D"]
texture_filter = 1
script = ExtResource("2")
BoxA_was_triggered = true

[node name="BoxA" type="Area2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 0
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="BoxA"]
sprite_frames = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BoxA"]
root_node = NodePath("../AnimatedSprite")
libraries = {
"": SubResource("AnimationLibrary_uj7gh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxA"]
shape = SubResource("7")

[node name="BoxB" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 0
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="BoxB"]
sprite_frames = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BoxB"]
root_node = NodePath("../../BoxA/AnimatedSprite")
libraries = {
"": SubResource("AnimationLibrary_nodfd")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoxB"]
shape = SubResource("11")

[connection signal="body_entered" from="BoxA" to="." method="_on_BoxA_body_entered"]
[connection signal="body_entered" from="BoxB" to="." method="_on_BoxB_body_entered"]
